Service and notification basic implementation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".addMovie" />
         <activity android:name=".viewMovie"></activity>
+        <service android:name=".service"></service>
     </application>
 
 </manifest>
